--- a/index.html
+++ b/index.html
@@ -4,37 +4,256 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
+
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
+
     <title>Сложно сосредоточиться</title>
+
     <script src="./scripts/script.js"></script>
+
+    <link rel="icon" href="./images/favicon.ico" sizes="48x48" />
+    <link
+      rel="icon"
+      href="./images/favicon.svg"
+      sizes="any"
+      type="image/svg+xml"
+    />
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
   </head>
-  <body class="page">
-    <header class="header decorated-zone">
-      <nav class="header__theme-menu">
-        <ul class="header__theme-menu-list">
-          <li class="header__theme-menu-item">
+  <body class="layout">
+    <header class="site-header frame-decor">
+      <div class="site-header__status-indicator" aria-hidden="true">rec</div>
+
+      <nav class="theme-switcher">
+        <ul class="theme-switcher__list">
+          <li class="theme-switcher__item">
             <button
-              class="header__theme-menu-button header__theme-menu-button_type_light"
+              class="theme-switcher__button theme-switcher__button_mode-light"
             >
               День
             </button>
           </li>
-          <li class="header__theme-menu-item">
+          <li class="theme-switcher__item">
             <button
-              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+              class="theme-switcher__button theme-switcher__button_active theme-switcher__button_mode-auto"
               disabled
             >
               Авто
             </button>
           </li>
-          <li class="header__theme-menu-item">
+          <li class="theme-switcher__item">
             <button
-              class="header__theme-menu-button header__theme-menu-button_type_dark"
+              class="theme-switcher__button theme-switcher__button_mode-dark"
             >
               Неон
             </button>
           </li>
         </ul>
       </nav>
+
+      <h1 class="site-header__title">no focus</h1>
+      <p class="site-header__subtitle highlight-title">
+        Что делать, когда не можешь делать ничего<br />
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+      </p>
     </header>
+
+    <main class="content">
+      <section class="section-block">
+        <h2 class="section-block__title">Почему сосредоточиться так сложно</h2>
+
+        <article class="section-block__card">
+          <h3 class="highlight-title">Многозадачность</h3>
+          <p class="section-block__text">
+            Особенно сложно сосредоточиться, когда задач много и все они —
+            важные. Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её
+            просто не существует. Исследователи
+            <a
+              class="inline-link"
+              href="https://www.dana.org/article/multicosts-of-multitasking/"
+              >выяснили</a
+            >, что мозгу тяжело концентрироваться даже на двух делах
+            одновременно. А когда в поле внимания попадает несколько важных
+            задач, организм паникует и выделяет кортизол и адреналин — «гормоны
+            стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
+            устаём.
+          </p>
+        </article>
+
+        <article class="section-block__card">
+          <h3 class="highlight-title">Дофамин</h3>
+          <p class="section-block__text">
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+            невозможности сосредоточиться замешана и полная противоположность
+            стрессу — дофамин. Это вещество участвует в системе вознаграждения
+            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на
+            что-то более «приятное» для мозгов. Например, смотрим лайки в
+            соцсетях. В это время и выделяется дофамин — и мы чувствуем
+            удовольствие. Получается замкнутый круг: чем больше отвлекаешься,
+            тем больше удовольствия получаешь.
+          </p>
+        </article>
+      </section>
+
+      <section class="section-block">
+        <h2 class="section-block__title">Что снижает концентрацию внимания?</h2>
+
+        <article class="section-block__card">
+          <h3 class="highlight-title">Многозадачность</h3>
+          <p class="section-block__text">
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+            мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё
+            время — невозможно. Концентрация — мышца, и она может не выдержать,
+            если не давать ей отдохнуть.
+          </p>
+        </article>
+
+        <article class="section-block__card">
+          <h3 class="highlight-title">Еда</h3>
+          <p class="section-block__text">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+            эта энергия также быстро, как и приходит. А мы в результате
+            попадаем на «углеводные качели»: как только действие «быстрых
+            углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+            хотим ещё больше быстрых углеводов.
+          </p>
+        </article>
+
+        <article class="section-block__card">
+          <h3 class="highlight-title">Гаджеты</h3>
+          <p class="section-block__text">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+            наушниках — подкаст, а на компьютере фоном — ещё и видео с
+            забавными утятами. В результате мозг пытается переключиться с одной
+            задачи на другую — и просто не может. А чтобы вернуться к состоянию
+            полной концентрации, человеку в среднем нужно 20 минут. Вот и
+            получается, что чем больше времени мы проводим в гаджетах, тем
+            больше времени затем нужно, чтобы вернуться к работе.
+          </p>
+        </article>
+      </section>
+
+      <section class="section-block">
+        <h2 class="section-block__title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+
+        <h3 class="highlight-title">5 простых (на самом деле не очень) советов</h3>
+
+        <article class="section-block__card">
+          <h4 class="highlight-title highlight-title_thin">
+            Представьте небо и облака
+          </h4>
+          <p class="section-block__text">
+            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+            успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
+            раз и мешают эти сложные задачи делать. В такие моменты можно
+            закрыть глаза и представить, что чистое небо — это вы, а облака —
+            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+            где-то там, за тучами, и никуда не денется. Это упражнение поможет
+            вернуться в настоящий момент, а не волноваться о потенциальных
+            проблемах из будущего.
+          </p>
+        </article>
+
+        <article class="section-block__card">
+          <h4 class="highlight-title highlight-title_thin">Включите музыку</h4>
+          <p class="section-block__text">
+            Но не любую, и не любимую. Любимая может быть связана с сильными
+            положительными эмоциями, которые тоже очень сильно отвлекают.
+            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+            попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
+        </article>
+
+        <article class="section-block__card">
+          <h4 class="highlight-title highlight-title_thin">Прогуляйтесь</h4>
+          <p class="section-block__text">
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            <a
+              class="inline-link"
+              href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+              >показал</a
+            >, что созерцание природы повышает концентрацию, в то время как
+            после просмотра городских пейзажей она наоборот понижается. Можно
+            совместить прогулку с физическими упражнениями или бегом — так в
+            мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+            простая двадцатиминутная прогулка — тоже отличный вариант.
+          </p>
+        </article>
+
+        <article class="section-block__card">
+          <h4 class="highlight-title highlight-title_thin">Хорошо ешьте</h4>
+          <p class="section-block__text">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+            которые препятствуют резким скачкам сахара в крови. Например, с
+            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+            чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+          </p>
+        </article>
+
+        <article class="section-block__card">
+          <h4 class="highlight-title highlight-title_thin">Читайте</h4>
+          <p class="section-block__text">
+            Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
+            прочитать пост в соцсети, достаточно нескольких минут или даже
+            секунд. А вот интересная книга способна затянуть и на несколько
+            часов и круто тренирует направленное внимание.
+          </p>
+        </article>
+      </section>
+
+      <section class="gallery-section">
+        <h2 class="highlight-title">А можно в картинках?</h2>
+
+        <img
+          class="gallery-section__image"
+          src="./images/sunset.png"
+          loading="lazy"
+          alt="Рисованное изображение заката уходящего в горы на фоне озера"
+        />
+        <img
+          class="gallery-section__image"
+          src="./images/ice-cream.png"
+          loading="lazy"
+          alt="Рисованное изображение шариков мороженного в тарелке"
+        />
+        <img
+          class="gallery-section__image"
+          src="./images/tape.png"
+          loading="lazy"
+          alt="Рисованное изображение с компакт-кассетой"
+        />
+        <img
+          class="gallery-section__image"
+          src="./images/books.png"
+          loading="lazy"
+          alt="Рисованное изображение с стопкой книг"
+        />
+        <img
+          class="gallery-section__image"
+          src="./images/street.png"
+          loading="lazy"
+          alt="Рисованное изображение японкской улицы"
+        />
+      </section>
+    </main>
+
+    <footer class="site-footer frame-decor">
+      <h2 class="site-footer__title">focus</h2>
+    </footer>
+
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
