--- a/index.html
+++ b/index.html
@@ -17,36 +17,36 @@
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
-    <header class="cover header decorated-zone">
-      <div class="rec-decor" aria-hidden="true"></div>
-      <nav class="header__theme-menu">
-        <ul class="header__theme-menu-list">
-          <li class="header__theme-menu-item">
+    <header class="cover header decorated-area">
+      <div class="record-icon" aria-hidden="true"></div>
+      <nav class="theme-menu">
+        <ul class="theme-menu-list">
+          <li class="theme-menu-item">
             <button
-              class="header__theme-menu-button header__theme-menu-button_type_light"
+              class="theme-menu-button theme-menu-button-light"
             >
               День
             </button>
           </li>
-          <li class="header__theme-menu-item">
+          <li class="theme-menu-item">
             <button
-              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+              class="theme-menu-button theme-menu-button-active theme-menu-button-auto"
               disabled
             >
               Авто
             </button>
           </li>
-          <li class="header__theme-menu-item">
+          <li class="theme-menu-item">
             <button
-              class="header__theme-menu-button header__theme-menu-button_type_dark"
+              class="theme-menu-button theme-menu-button-dark"
             >
               Неон
             </button>
           </li>
         </ul>
       </nav>
-      <h1 class="page-title shadow-decor">no focus</h1>
-      <p class="header__title">
+      <h1 class="page-title shadow-text">no focus</h1>
+      <p class="header-title">
         Что делать, когда не можешь делать ничего<br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
       </p>
@@ -57,14 +57,14 @@
         <ul class="articles-list">
           <li>
             <article class="article">
-              <h3 class="title title-decor">Многозадачность</h3>
+              <h3 class="title title-decorated">Многозадачность</h3>
               <p>
                 Особенно сложно сосредоточиться, когда задач много и все они —
                 важные. Где же легендарная многозадачность, когда она так нужна
                 вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
                 её просто не существует. Исследователи
                 <a
-                  class="link shadow-decor"
+                  class="link shadow-text"
                   href="https://dana.org/article/multicosts-of-multitasking/"
                   target="_blank"
                   >выяснили</a
@@ -78,7 +78,7 @@
           </li>
           <li>
             <article class="article">
-              <h3 class="title title-decor">Дофамин</h3>
+              <h3 class="title title-decorated">Дофамин</h3>
               <p>
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В
                 нашей невозможности сосредоточиться замешана и полная
@@ -96,10 +96,10 @@
       </section>
       <section class="section section-what">
         <h2 class="title">Что снижает концентрацию внимания?</h2>
-        <ul class="articles-list section-what__articles-list">
+        <ul class="articles-list section-what-articles">
           <li>
             <article class="article">
-              <h3 class="title title-decor">Многозадачность</h3>
+              <h3 class="title title-decorated">Многозадачность</h3>
               <p>
                 Как концентрация может снижаться из-за… концентрации? Любая
                 стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -112,20 +112,20 @@
           </li>
           <li>
             <article class="article">
-              <h3 class="title title-decor">Еда</h3>
+              <h3 class="title title-decorated">Еда</h3>
               <p>
                 «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
                 доставляют в мозг энергию и помогают ему лучше работать. Но
                 уходит эта энергия также быстро, как и приходит. А мы в
                 результате попадаем на «углеводные качели»: как только действие
                 «быстрых углеводов» заканчивается, мы чувствуем усталость и
-                сонливость. И хотим ещё больше быстрых углеводов.
+                сонливость. И хотим ещё больше быстрых углеводы.
               </p>
             </article>
           </li>
           <li>
             <article class="article">
-              <h3 class="title title-decor">Гаджеты</h3>
+              <h3 class="title title-decorated">Гаджеты</h3>
               <p>
                 Да-да, это та самая ситуация, когда на экране ноутбука — код, в
                 наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -146,13 +146,13 @@
           секунд)
         </h2>
         <div>
-          <h3 class="title title-decor section-how__title">
+          <h3 class="title title-decorated section-how-title">
             5 простых (на самом деле не очень) советов
           </h3>
-          <ul class="articles-list section-how__articles-list">
+          <ul class="articles-list section-how-articles">
             <li>
               <article class="article">
-                <h4 class="title title-decor">Представьте небо и облака</h4>
+                <h4 class="title title-decorated">Представьте небо и облака</h4>
                 <p>
                   Или листья в ручье. Тут дело в лёгкой медитации, которая
                   помогает успокоиться. Ведь часто именно тревожные мысли о
@@ -168,7 +168,7 @@
             </li>
             <li>
               <article class="article">
-                <h4 class="title title-decor">Включите музыку</h4>
+                <h4 class="title title-decorated">Включите музыку</h4>
                 <p>
                   Но не любую, и не любимую. Любимая может быть связана с
                   сильными положительными эмоциями, которые тоже очень сильно
@@ -180,12 +180,12 @@
             </li>
             <li>
               <article class="article">
-                <h4 class="title title-decor">Прогуляйтесь</h4>
+                <h4 class="title title-decorated">Прогуляйтесь</h4>
                 <p>
                   Или даже пробегитесь. Лучше найти парк или лес: один
                   эксперимент
                   <a
-                    class="link shadow-decor"
+                    class="link shadow-text"
                     href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                     target="_blank"
                     >показал</a
@@ -200,7 +200,7 @@
             </li>
             <li>
               <article class="article">
-                <h4 class="title title-decor">Хорошо ешьте</h4>
+                <h4 class="title title-decorated">Хорошо ешьте</h4>
                 <p>
                   Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                   которые препятствуют резким скачкам сахара в крови. Например,
@@ -212,7 +212,7 @@
             </li>
             <li>
               <article class="article">
-                <h4 class="title title-decor">Читайте</h4>
+                <h4 class="title title-decorated">Читайте</h4>
                 <p>
                   Настоящие бумажные книги. Это правда помогает с концентрацией:
                   чтобы прочитать пост в соцсети, достаточно нескольких минут
@@ -225,52 +225,52 @@
         </div>
       </section>
       <section class="section section-gallery">
-        <h2 class="title title-decor">А можно в картинках?</h2>
+        <h2 class="title title-decorated">А можно в картинках?</h2>
         <ul class="gallery-list">
-          <li class="gallery-list__item">
+          <li class="gallery-item">
             <picture>
               <img
-                class="gallery-list__item-img"
+                class="gallery-img"
                 src="./images/sunset.png"
                 alt="Изображение совета: Представьте небо и облака"
                 loading="lazy"
               />
             </picture>
           </li>
-          <li class="gallery-list__item">
+          <li class="gallery-item">
             <picture>
               <img
-                class="gallery-list__item-img"
+                class="gallery-img"
                 src="./images/ice-cream.png"
                 alt="Изображение совета: Хорошо ешьте"
                 loading="lazy"
               />
             </picture>
           </li>
-          <li class="gallery-list__item">
+          <li class="gallery-item">
             <picture>
               <img
-                class="gallery-list__item-img"
+                class="gallery-img"
                 src="./images/tape.png"
                 alt="Изображение совета: Включите музыку"
                 loading="lazy"
               />
             </picture>
           </li>
-          <li class="gallery-list__item">
+          <li class="gallery-item">
             <picture>
               <img
-                class="gallery-list__item-img"
+                class="gallery-img"
                 src="./images/books.png"
                 alt="Изображение совета: Читайте"
                 loading="lazy"
               />
             </picture>
           </li>
-          <li class="gallery-list__item">
+          <li class="gallery-item">
             <picture>
               <img
-                class="gallery-list__item-img"
+                class="gallery-img"
                 src="./images/street.png"
                 alt="Изображение совета: Прогуляйтесь"
                 loading="lazy"
@@ -280,8 +280,8 @@
         </ul>
       </section>
     </main>
-    <footer class="cover footer decorated-zone">
-      <h2 class="page-title shadow-decor">focus</h2>
+    <footer class="cover footer decorated-area">
+      <h2 class="page-title shadow-text">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
